# vkengine

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Session.vim  rustfmt.toml
shaders/: basic.frag  basic.vert  common.glsl
src/: components.rs  main.rs  resources.rs  shaders.rs  systems.rs  vulkano_win.rs
src/components/: mod.rs  transform.rs
src/renderer/: camera.rs  debug.rs  geometry.rs  lights.rs  mod.rs  queues.rs  shaders.rs
src/systems/: mod.rs  transform.rs
