[package]
name = "vkengine"
version = "0.1.0"
authors = ["Dennis Kristiansen <dennkris@live.no>"]
edition = "2018"

[dependencies]
sdl2 = "0.32.0-beta.2"
# sdl2 = { path = "../rust-sdl2" }
vulkano = "0.11.1"
vulkano-shaders = "0.11.1"
# vulkano = { path = "../vulkano/vulkano" }
# vulkano-shaders = { path = "../vulkano/vulkano-shaders" }

float_duration = "0.3.3"
hibitset = "0.5.3"
fixedbitset = "0.1.9"

# Logging
log = "0.4.6"
env_logger = "0.6.0"

# Math and physics
alga = "0.7.2"
nalgebra = "0.16.11"
#ncollide3d = "*"
#nphysics3d = "*"

# Mesh
#glft = "*"
genmesh = "0.6.2"

specs = "0.14.1"
specs-derive = "0.3.0"
specs-hierarchy = "0.3.0"

[profile.release]
lto = true
